# hub

./: .env.example  .eslintrc.json  .gitignore  .mlc_config.json  .pre-commit-config.yaml  AGENTS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  concept.html  mypy.ini  opencode.json  opencode.template.json  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.n3rv/: a2a-config.yaml  org-config.yaml  skill-registry.md
.n3rverberage/: a2a-config.yaml  skill-registry.md
.nerv/: skill-registry.md
.opencode/: package.json
data/: model-catalog.json
docs/: Funding_Plan.md  Pitch_Executive_Summary.md  architecture.md  archive-github-ops-upgrade.md  data_model.md  design-github-ops-upgrade.md  design-hear.md  design-qwen-opencode.md  design-rvrb-providers.md  design-rvrb-verify.md  design-see.md  frontend_spec.md  orchestration-boundary.md  plan-qwen-integration.md  proposal-github-ops-upgrade.md  qwen-model-catalog.md  roadmap.md  satellite-protocol-v2.md  satellite-protocol.md  spec-github-ops-upgrade.md  spec-hear.md  spec-provider-agnostic-refactor.md  spec-see.md  spec-transform.md  stage-a-catalog.md  stage-a-tracking.md  task.md  tasks-github-ops-upgrade.md  tasks-hear.md  tasks-see.md  verify-github-ops-upgrade.md
prisma/: schema.prisma
scripts/: dev-setup.sh  init-satellite-wiki.py  opencode.sh  quality-gate.sh  qwen_fallback.py  scaffold-satellite.py  validate-catalog.py
tests/: conftest.py  test_base.py  test_factory.py  test_fallback.py  (+12 more)
(+145 files in other folders)
